force-app/main/default/objects/CashierCode__c/CashierCode__c.object-meta.xml
<CustomObject>
    <description>PacPoint-CL051618 - Created for phase1</description>
    <label>Cashier Code</label>
    <nameField>
        <label>Cashier Codes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cashier Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>