force-app/main/default/objects/CashierCode__c/fields/BoardProgram__c.field-meta.xml
<CustomField>
    <fullName>BoardProgram__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC071719- Created for Phase 2</description>
    <label>Board/Program</label>
    <referenceTo>BoardProgram__c</referenceTo>
    <relationshipLabel>Cashier Codes</relationshipLabel>
    <relationshipName>CashierCodes</relationshipName>
    <type>Lookup</type>
</CustomField>