force-app/main/default/objects/CashierCode__c/fields/breg_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Type__c</fullName>
    <description>Aalta BREG-424</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Form Fees</fullName>
            </value>
            <value>
                <fullName>Expedite Fees</fullName>
            </value>
            <value>
                <fullName>Archive Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>