force-app/main/default/objects/CashierCode__c/fields/CashierCode__c.field-meta.xml
<CustomField>
    <fullName>CashierCode__c</fullName>
    <description>PacPoint-CL051618 - Created for phase1</description>
    <label>Cashier Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>