force-app/main/default/objects/CashierCode__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>PacPoint-FT053018 - Created for phase 1</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>