force-app/main/default/objects/CashierCode__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <description>PacPoint-CL051618 - Created for phase1</description>
    <label>Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>