force-app/main/default/objects/CashierCode__c/fields/CurrentDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentDate__c</fullName>
    <description>PacPoint-IC121118- Created for Phase 1 

This is for the BatchNumber auto generation on the Flow &quot;Upload Batch Transactions&quot;.</description>
    <formula>IF(LEN(TEXT(MONTH(TODAY()))) = 1, &apos;0&apos;+TEXT(MONTH( TODAY() )), TEXT(MONTH( TODAY() )))+&quot;-&quot; + IF(LEN(TEXT(DAY(TODAY()))) = 1, &apos;0&apos;+TEXT(DAY(TODAY())), TEXT(DAY(TODAY()))) + &quot;-&quot; +TEXT(YEAR(TODAY()))</formula>
    <label>CurrentDate</label>
    <type>Text</type>
</CustomField>