force-app/main/default/objects/CashierCode__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PacPoint-CL051618 - Created for phase1</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>