force-app/main/default/objects/CashierCode__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>PacPoint-FT053018 - Created for phase 1</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BREG</fullName>
            </value>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>CATV</fullName>
            </value>
            <value>
                <fullName>DFI</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>HPEAP</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>OAH</fullName>
            </value>
            <value>
                <fullName>OCP</fullName>
            </value>
            <value>
                <fullName>PUC</fullName>
            </value>
            <value>
                <fullName>PVL</fullName>
            </value>
            <value>
                <fullName>PVL Real Estate</fullName>
            </value>
            <value>
                <fullName>RICO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>