force-app/main/default/objects/CashierCode__c/fields/FAMISSrcCode__c.field-meta.xml
<CustomField>
    <fullName>FAMISSrcCode__c</fullName>
    <description>PacPoint-FT053018 - Created for phase 1</description>
    <label>FAMIS Src Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>