force-app/main/default/objects/CashierCode__c/fields/FeeCode__c.field-meta.xml
<CustomField>
    <fullName>FeeCode__c</fullName>
    <description>PacPoint-FT082218 - Created for phase 1

Code used by BREG to associate Cashier Codes for transaction line items.</description>
    <label>Fee Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>