force-app/main/default/objects/CashierCode__c/fields/FormDescription__c.field-meta.xml
<CustomField>
    <fullName>FormDescription__c</fullName>
    <label>Form Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>