force-app/main/default/objects/CashierCode__c/fields/FundAccount__c.field-meta.xml
<CustomField>
    <fullName>FundAccount__c</fullName>
    <description>PacPoint-CL051618 - Created for phase1</description>
    <label>Fund Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>