force-app/main/default/objects/CashierCode__c/fields/TrustAccount__c.field-meta.xml
<CustomField>
    <fullName>TrustAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trust Account</label>
    <type>Checkbox</type>
</CustomField>