force-app/main/default/objects/CashierCode__c/listViews/All_Cashier_Codes.listView-meta.xml
<ListView>
    <fullName>All_Cashier_Codes</fullName>
    <columns>CashierCode__c</columns>
    <columns>Amount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>FundAccount__c</columns>
    <columns>FAMISSrcCode__c</columns>
    <columns>CostCenter__c</columns>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Category__c</columns>
    <columns>FeeCode__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Cashier Codes</label>
</ListView>