force-app/main/default/objects/CashierCode__c/listViews/Copy_of_BREG_Cashier_List_View.listView-meta.xml
<ListView>
    <fullName>Copy_of_BREG_Cashier_List_View</fullName>
    <columns>NAME</columns>
    <columns>CashierCode__c</columns>
    <columns>Amount__c</columns>
    <columns>FundAccount__c</columns>
    <columns>FAMISSrcCode__c</columns>
    <columns>Category__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <columns>Division__c</columns>
    <columns>FormDescription__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>CAP</value>
    </filters>
    <label>CAP Cashier List View</label>
</ListView>