force-app/main/default/objects/CashierCode__c/listViews/OAH_Cashier_List_View.listView-meta.xml
<ListView>
    <fullName>OAH_Cashier_List_View</fullName>
    <columns>NAME</columns>
    <columns>CashierCode__c</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>Division__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>OAH</value>
    </filters>
    <label>OAH Cashier List View</label>
</ListView>