force-app/main/default/objects/CashierCode__c/listViews/PVL_Real_Estate.listView-meta.xml
<ListView>
    <fullName>PVL_Real_Estate</fullName>
    <columns>CashierCode__c</columns>
    <columns>NAME</columns>
    <columns>CostCenter__c</columns>
    <columns>FAMISSrcCode__c</columns>
    <columns>FundAccount__c</columns>
    <columns>Division__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>PVL Real Estate</value>
    </filters>
    <label>PVL Real Estate</label>
</ListView>