force-app/main/default/objects/CashierCode__c/listViews/RICO_Cashier_Codes.listView-meta.xml
<ListView>
    <fullName>RICO_Cashier_Codes</fullName>
    <columns>CashierCode__c</columns>
    <columns>FundAccount__c</columns>
    <columns>FAMISSrcCode__c</columns>
    <columns>Amount__c</columns>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Category__c</columns>
    <columns>FeeCode__c</columns>
    <columns>CostCenter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>RICO</value>
    </filters>
    <label>RICO Cashier Codes</label>
</ListView>