force-app/main/default/objects/CashierCode__c/listViews/Trust_Accounts.listView-meta.xml
<ListView>
    <fullName>Trust_Accounts</fullName>
    <columns>NAME</columns>
    <columns>CostCenter__c</columns>
    <columns>FAMISSrcCode__c</columns>
    <columns>FeeCode__c</columns>
    <columns>FundAccount__c</columns>
    <columns>TrustAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TrustAccount__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Trust Accounts</label>
</ListView>